hopefully fix failing startup